cluster/deployments/argocd/mario-app/mario-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mario
  name: mario-deployment
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mario
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
