cluster/deployments/argocd/mario-app/mario-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-mario
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx" 
  labels:
spec:
  rules:
    - http:
      paths:
      - path: /mario
        pathType: Prefix
        backend:
          service:
            name: mario-deployment
            port:
              number: 8080
  ingressClassName: nginx
